// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generateInputTypesFile generates complete types file for multiple tables with relations 1`] = `
"/**
 * GraphQL types for ORM client
 * @generated by @constructive-io/graphql-codegen
 * DO NOT EDIT - changes will be overwritten
 */
// ============ Scalar Filter Types ============
export interface StringFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
  includes?: string;
  notIncludes?: string;
  includesInsensitive?: string;
  notIncludesInsensitive?: string;
  startsWith?: string;
  notStartsWith?: string;
  startsWithInsensitive?: string;
  notStartsWithInsensitive?: string;
  endsWith?: string;
  notEndsWith?: string;
  endsWithInsensitive?: string;
  notEndsWithInsensitive?: string;
  like?: string;
  notLike?: string;
  likeInsensitive?: string;
  notLikeInsensitive?: string;
}
export interface IntFilter {
  isNull?: boolean;
  equalTo?: number;
  notEqualTo?: number;
  distinctFrom?: number;
  notDistinctFrom?: number;
  in?: number[];
  notIn?: number[];
  lessThan?: number;
  lessThanOrEqualTo?: number;
  greaterThan?: number;
  greaterThanOrEqualTo?: number;
}
export interface FloatFilter {
  isNull?: boolean;
  equalTo?: number;
  notEqualTo?: number;
  distinctFrom?: number;
  notDistinctFrom?: number;
  in?: number[];
  notIn?: number[];
  lessThan?: number;
  lessThanOrEqualTo?: number;
  greaterThan?: number;
  greaterThanOrEqualTo?: number;
}
export interface BooleanFilter {
  isNull?: boolean;
  equalTo?: boolean;
  notEqualTo?: boolean;
}
export interface UUIDFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
}
export interface DatetimeFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
}
export interface DateFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
}
export interface JSONFilter {
  isNull?: boolean;
  equalTo?: Record<string, unknown>;
  notEqualTo?: Record<string, unknown>;
  distinctFrom?: Record<string, unknown>;
  notDistinctFrom?: Record<string, unknown>;
  contains?: Record<string, unknown>;
  containedBy?: Record<string, unknown>;
  containsKey?: string;
  containsAllKeys?: string[];
  containsAnyKeys?: string[];
}
export interface BigIntFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
}
export interface BigFloatFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
}
export interface BitStringFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
}
export interface InternetAddressFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
  contains?: string;
  containsOrEqualTo?: string;
  containedBy?: string;
  containedByOrEqualTo?: string;
  containsOrContainedBy?: string;
}
export interface FullTextFilter {
  matches?: string;
}
export interface StringListFilter {
  isNull?: boolean;
  equalTo?: string[];
  notEqualTo?: string[];
  distinctFrom?: string[];
  notDistinctFrom?: string[];
  lessThan?: string[];
  lessThanOrEqualTo?: string[];
  greaterThan?: string[];
  greaterThanOrEqualTo?: string[];
  contains?: string[];
  containedBy?: string[];
  overlaps?: string[];
  anyEqualTo?: string;
  anyNotEqualTo?: string;
  anyLessThan?: string;
  anyLessThanOrEqualTo?: string;
  anyGreaterThan?: string;
  anyGreaterThanOrEqualTo?: string;
}
export interface IntListFilter {
  isNull?: boolean;
  equalTo?: number[];
  notEqualTo?: number[];
  distinctFrom?: number[];
  notDistinctFrom?: number[];
  lessThan?: number[];
  lessThanOrEqualTo?: number[];
  greaterThan?: number[];
  greaterThanOrEqualTo?: number[];
  contains?: number[];
  containedBy?: number[];
  overlaps?: number[];
  anyEqualTo?: number;
  anyNotEqualTo?: number;
  anyLessThan?: number;
  anyLessThanOrEqualTo?: number;
  anyGreaterThan?: number;
  anyGreaterThanOrEqualTo?: number;
}
export interface UUIDListFilter {
  isNull?: boolean;
  equalTo?: string[];
  notEqualTo?: string[];
  distinctFrom?: string[];
  notDistinctFrom?: string[];
  lessThan?: string[];
  lessThanOrEqualTo?: string[];
  greaterThan?: string[];
  greaterThanOrEqualTo?: string[];
  contains?: string[];
  containedBy?: string[];
  overlaps?: string[];
  anyEqualTo?: string;
  anyNotEqualTo?: string;
  anyLessThan?: string;
  anyLessThanOrEqualTo?: string;
  anyGreaterThan?: string;
  anyGreaterThanOrEqualTo?: string;
}
// ============ Entity Types ============
export interface User {
  id: string;
  email?: string | null;
  name?: string | null;
  age?: number | null;
  isActive?: boolean | null;
  createdAt?: string | null;
  metadata?: Record<string, unknown> | null;
}
export interface Post {
  id: string;
  title?: string | null;
  content?: string | null;
  authorId?: string | null;
  publishedAt?: string | null;
  tags?: string | null;
}
export interface Comment {
  id: string;
  body?: string | null;
  postId?: string | null;
  authorId?: string | null;
  createdAt?: string | null;
}
// ============ Relation Helper Types ============
export interface ConnectionResult<T> {
  nodes: T[];
  totalCount: number;
  pageInfo: PageInfo;
}
export interface PageInfo {
  hasNextPage: boolean;
  hasPreviousPage: boolean;
  startCursor?: string | null;
  endCursor?: string | null;
}
// ============ Entity Relation Types ============
export interface UserRelations {
  posts?: ConnectionResult<Post>;
  comments?: ConnectionResult<Comment>;
}
export interface PostRelations {
  author?: User | null;
  comments?: ConnectionResult<Comment>;
}
export interface CommentRelations {
  post?: Post | null;
  author?: User | null;
}
// ============ Entity Types With Relations ============
export type UserWithRelations = User & UserRelations;
export type PostWithRelations = Post & PostRelations;
export type CommentWithRelations = Comment & CommentRelations;
// ============ Entity Select Types ============
export type UserSelect = {
  id?: boolean;
  email?: boolean;
  name?: boolean;
  age?: boolean;
  isActive?: boolean;
  createdAt?: boolean;
  metadata?: boolean;
  posts?: {
    select: PostSelect;
    first?: number;
    filter?: PostFilter;
    orderBy?: PostsOrderBy[];
  };
  comments?: {
    select: CommentSelect;
    first?: number;
    filter?: CommentFilter;
    orderBy?: CommentsOrderBy[];
  };
};
export type PostSelect = {
  id?: boolean;
  title?: boolean;
  content?: boolean;
  authorId?: boolean;
  publishedAt?: boolean;
  tags?: boolean;
  author?: {
    select: UserSelect;
  };
  comments?: {
    select: CommentSelect;
    first?: number;
    filter?: CommentFilter;
    orderBy?: CommentsOrderBy[];
  };
};
export type CommentSelect = {
  id?: boolean;
  body?: boolean;
  postId?: boolean;
  authorId?: boolean;
  createdAt?: boolean;
  post?: {
    select: PostSelect;
  };
  author?: {
    select: UserSelect;
  };
};
// ============ Table Filter Types ============
export interface UserFilter {
  id?: UUIDFilter;
  email?: StringFilter;
  name?: StringFilter;
  age?: IntFilter;
  isActive?: BooleanFilter;
  createdAt?: DatetimeFilter;
  metadata?: JSONFilter;
  and?: UserFilter[];
  or?: UserFilter[];
  not?: UserFilter;
}
export interface PostFilter {
  id?: UUIDFilter;
  title?: StringFilter;
  content?: StringFilter;
  authorId?: UUIDFilter;
  publishedAt?: DatetimeFilter;
  tags?: StringFilter;
  and?: PostFilter[];
  or?: PostFilter[];
  not?: PostFilter;
}
export interface CommentFilter {
  id?: UUIDFilter;
  body?: StringFilter;
  postId?: UUIDFilter;
  authorId?: UUIDFilter;
  createdAt?: DatetimeFilter;
  and?: CommentFilter[];
  or?: CommentFilter[];
  not?: CommentFilter;
}
// ============ Table Condition Types ============
export interface UserCondition {
  id?: string | null;
  email?: string | null;
  name?: string | null;
  age?: number | null;
  isActive?: boolean | null;
  createdAt?: string | null;
  metadata?: unknown | null;
}
export interface PostCondition {
  id?: string | null;
  title?: string | null;
  content?: string | null;
  authorId?: string | null;
  publishedAt?: string | null;
  tags?: string | null;
}
export interface CommentCondition {
  id?: string | null;
  body?: string | null;
  postId?: string | null;
  authorId?: string | null;
  createdAt?: string | null;
}
// ============ OrderBy Types ============
export type UsersOrderBy = "PRIMARY_KEY_ASC" | "PRIMARY_KEY_DESC" | "NATURAL" | "ID_ASC" | "ID_DESC" | "EMAIL_ASC" | "EMAIL_DESC" | "NAME_ASC" | "NAME_DESC" | "AGE_ASC" | "AGE_DESC" | "IS_ACTIVE_ASC" | "IS_ACTIVE_DESC" | "CREATED_AT_ASC" | "CREATED_AT_DESC" | "METADATA_ASC" | "METADATA_DESC";
export type PostsOrderBy = "PRIMARY_KEY_ASC" | "PRIMARY_KEY_DESC" | "NATURAL" | "ID_ASC" | "ID_DESC" | "TITLE_ASC" | "TITLE_DESC" | "CONTENT_ASC" | "CONTENT_DESC" | "AUTHOR_ID_ASC" | "AUTHOR_ID_DESC" | "PUBLISHED_AT_ASC" | "PUBLISHED_AT_DESC" | "TAGS_ASC" | "TAGS_DESC";
export type CommentsOrderBy = "PRIMARY_KEY_ASC" | "PRIMARY_KEY_DESC" | "NATURAL" | "ID_ASC" | "ID_DESC" | "BODY_ASC" | "BODY_DESC" | "POST_ID_ASC" | "POST_ID_DESC" | "AUTHOR_ID_ASC" | "AUTHOR_ID_DESC" | "CREATED_AT_ASC" | "CREATED_AT_DESC";
// ============ CRUD Input Types ============
export interface CreateUserInput {
  clientMutationId?: string;
  user: {
    email?: string;
    name?: string;
    age?: number;
    isActive?: boolean;
    metadata?: Record<string, unknown>;
  };
}
export interface UserPatch {
  email?: string | null;
  name?: string | null;
  age?: number | null;
  isActive?: boolean | null;
  metadata?: Record<string, unknown> | null;
}
export interface UpdateUserInput {
  clientMutationId?: string;
  id: string;
  userPatch: UserPatch;
}
export interface DeleteUserInput {
  clientMutationId?: string;
  id: string;
}
export interface CreatePostInput {
  clientMutationId?: string;
  post: {
    title?: string;
    content?: string;
    authorId: string;
    publishedAt?: string;
    tags?: string;
  };
}
export interface PostPatch {
  title?: string | null;
  content?: string | null;
  authorId?: string | null;
  publishedAt?: string | null;
  tags?: string | null;
}
export interface UpdatePostInput {
  clientMutationId?: string;
  id: string;
  postPatch: PostPatch;
}
export interface DeletePostInput {
  clientMutationId?: string;
  id: string;
}
export interface CreateCommentInput {
  clientMutationId?: string;
  comment: {
    body?: string;
    postId: string;
    authorId: string;
  };
}
export interface CommentPatch {
  body?: string | null;
  postId?: string | null;
  authorId?: string | null;
}
export interface UpdateCommentInput {
  clientMutationId?: string;
  id: string;
  commentPatch: CommentPatch;
}
export interface DeleteCommentInput {
  clientMutationId?: string;
  id: string;
}
// ============ Connection Fields Map ============
export const connectionFieldsMap = {
  "User": {
    "posts": "Post",
    "comments": "Comment"
  },
  "Post": {
    "comments": "Comment"
  }
} as Record<string, Record<string, string>>;"
`;

exports[`generateInputTypesFile generates complete types file for single table 1`] = `
"/**
 * GraphQL types for ORM client
 * @generated by @constructive-io/graphql-codegen
 * DO NOT EDIT - changes will be overwritten
 */
// ============ Scalar Filter Types ============
export interface StringFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
  includes?: string;
  notIncludes?: string;
  includesInsensitive?: string;
  notIncludesInsensitive?: string;
  startsWith?: string;
  notStartsWith?: string;
  startsWithInsensitive?: string;
  notStartsWithInsensitive?: string;
  endsWith?: string;
  notEndsWith?: string;
  endsWithInsensitive?: string;
  notEndsWithInsensitive?: string;
  like?: string;
  notLike?: string;
  likeInsensitive?: string;
  notLikeInsensitive?: string;
}
export interface IntFilter {
  isNull?: boolean;
  equalTo?: number;
  notEqualTo?: number;
  distinctFrom?: number;
  notDistinctFrom?: number;
  in?: number[];
  notIn?: number[];
  lessThan?: number;
  lessThanOrEqualTo?: number;
  greaterThan?: number;
  greaterThanOrEqualTo?: number;
}
export interface FloatFilter {
  isNull?: boolean;
  equalTo?: number;
  notEqualTo?: number;
  distinctFrom?: number;
  notDistinctFrom?: number;
  in?: number[];
  notIn?: number[];
  lessThan?: number;
  lessThanOrEqualTo?: number;
  greaterThan?: number;
  greaterThanOrEqualTo?: number;
}
export interface BooleanFilter {
  isNull?: boolean;
  equalTo?: boolean;
  notEqualTo?: boolean;
}
export interface UUIDFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
}
export interface DatetimeFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
}
export interface DateFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
}
export interface JSONFilter {
  isNull?: boolean;
  equalTo?: Record<string, unknown>;
  notEqualTo?: Record<string, unknown>;
  distinctFrom?: Record<string, unknown>;
  notDistinctFrom?: Record<string, unknown>;
  contains?: Record<string, unknown>;
  containedBy?: Record<string, unknown>;
  containsKey?: string;
  containsAllKeys?: string[];
  containsAnyKeys?: string[];
}
export interface BigIntFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
}
export interface BigFloatFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
}
export interface BitStringFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
}
export interface InternetAddressFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
  contains?: string;
  containsOrEqualTo?: string;
  containedBy?: string;
  containedByOrEqualTo?: string;
  containsOrContainedBy?: string;
}
export interface FullTextFilter {
  matches?: string;
}
export interface StringListFilter {
  isNull?: boolean;
  equalTo?: string[];
  notEqualTo?: string[];
  distinctFrom?: string[];
  notDistinctFrom?: string[];
  lessThan?: string[];
  lessThanOrEqualTo?: string[];
  greaterThan?: string[];
  greaterThanOrEqualTo?: string[];
  contains?: string[];
  containedBy?: string[];
  overlaps?: string[];
  anyEqualTo?: string;
  anyNotEqualTo?: string;
  anyLessThan?: string;
  anyLessThanOrEqualTo?: string;
  anyGreaterThan?: string;
  anyGreaterThanOrEqualTo?: string;
}
export interface IntListFilter {
  isNull?: boolean;
  equalTo?: number[];
  notEqualTo?: number[];
  distinctFrom?: number[];
  notDistinctFrom?: number[];
  lessThan?: number[];
  lessThanOrEqualTo?: number[];
  greaterThan?: number[];
  greaterThanOrEqualTo?: number[];
  contains?: number[];
  containedBy?: number[];
  overlaps?: number[];
  anyEqualTo?: number;
  anyNotEqualTo?: number;
  anyLessThan?: number;
  anyLessThanOrEqualTo?: number;
  anyGreaterThan?: number;
  anyGreaterThanOrEqualTo?: number;
}
export interface UUIDListFilter {
  isNull?: boolean;
  equalTo?: string[];
  notEqualTo?: string[];
  distinctFrom?: string[];
  notDistinctFrom?: string[];
  lessThan?: string[];
  lessThanOrEqualTo?: string[];
  greaterThan?: string[];
  greaterThanOrEqualTo?: string[];
  contains?: string[];
  containedBy?: string[];
  overlaps?: string[];
  anyEqualTo?: string;
  anyNotEqualTo?: string;
  anyLessThan?: string;
  anyLessThanOrEqualTo?: string;
  anyGreaterThan?: string;
  anyGreaterThanOrEqualTo?: string;
}
// ============ Entity Types ============
export interface User {
  id: string;
  email?: string | null;
  name?: string | null;
  age?: number | null;
  isActive?: boolean | null;
  createdAt?: string | null;
  metadata?: Record<string, unknown> | null;
}
// ============ Relation Helper Types ============
export interface ConnectionResult<T> {
  nodes: T[];
  totalCount: number;
  pageInfo: PageInfo;
}
export interface PageInfo {
  hasNextPage: boolean;
  hasPreviousPage: boolean;
  startCursor?: string | null;
  endCursor?: string | null;
}
// ============ Entity Relation Types ============
export interface UserRelations {}
// ============ Entity Types With Relations ============
export type UserWithRelations = User & UserRelations;
// ============ Entity Select Types ============
export type UserSelect = {
  id?: boolean;
  email?: boolean;
  name?: boolean;
  age?: boolean;
  isActive?: boolean;
  createdAt?: boolean;
  metadata?: boolean;
};
// ============ Table Filter Types ============
export interface UserFilter {
  id?: UUIDFilter;
  email?: StringFilter;
  name?: StringFilter;
  age?: IntFilter;
  isActive?: BooleanFilter;
  createdAt?: DatetimeFilter;
  metadata?: JSONFilter;
  and?: UserFilter[];
  or?: UserFilter[];
  not?: UserFilter;
}
// ============ Table Condition Types ============
export interface UserCondition {
  id?: string | null;
  email?: string | null;
  name?: string | null;
  age?: number | null;
  isActive?: boolean | null;
  createdAt?: string | null;
  metadata?: unknown | null;
}
// ============ OrderBy Types ============
export type UsersOrderBy = "PRIMARY_KEY_ASC" | "PRIMARY_KEY_DESC" | "NATURAL" | "ID_ASC" | "ID_DESC" | "EMAIL_ASC" | "EMAIL_DESC" | "NAME_ASC" | "NAME_DESC" | "AGE_ASC" | "AGE_DESC" | "IS_ACTIVE_ASC" | "IS_ACTIVE_DESC" | "CREATED_AT_ASC" | "CREATED_AT_DESC" | "METADATA_ASC" | "METADATA_DESC";
// ============ CRUD Input Types ============
export interface CreateUserInput {
  clientMutationId?: string;
  user: {
    email?: string;
    name?: string;
    age?: number;
    isActive?: boolean;
    metadata?: Record<string, unknown>;
  };
}
export interface UserPatch {
  email?: string | null;
  name?: string | null;
  age?: number | null;
  isActive?: boolean | null;
  metadata?: Record<string, unknown> | null;
}
export interface UpdateUserInput {
  clientMutationId?: string;
  id: string;
  userPatch: UserPatch;
}
export interface DeleteUserInput {
  clientMutationId?: string;
  id: string;
}
// ============ Connection Fields Map ============
export const connectionFieldsMap = {} as Record<string, Record<string, string>>;"
`;

exports[`generateInputTypesFile generates custom input types from TypeRegistry 1`] = `
"/**
 * GraphQL types for ORM client
 * @generated by @constructive-io/graphql-codegen
 * DO NOT EDIT - changes will be overwritten
 */
// ============ Scalar Filter Types ============
export interface StringFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
  includes?: string;
  notIncludes?: string;
  includesInsensitive?: string;
  notIncludesInsensitive?: string;
  startsWith?: string;
  notStartsWith?: string;
  startsWithInsensitive?: string;
  notStartsWithInsensitive?: string;
  endsWith?: string;
  notEndsWith?: string;
  endsWithInsensitive?: string;
  notEndsWithInsensitive?: string;
  like?: string;
  notLike?: string;
  likeInsensitive?: string;
  notLikeInsensitive?: string;
}
export interface IntFilter {
  isNull?: boolean;
  equalTo?: number;
  notEqualTo?: number;
  distinctFrom?: number;
  notDistinctFrom?: number;
  in?: number[];
  notIn?: number[];
  lessThan?: number;
  lessThanOrEqualTo?: number;
  greaterThan?: number;
  greaterThanOrEqualTo?: number;
}
export interface FloatFilter {
  isNull?: boolean;
  equalTo?: number;
  notEqualTo?: number;
  distinctFrom?: number;
  notDistinctFrom?: number;
  in?: number[];
  notIn?: number[];
  lessThan?: number;
  lessThanOrEqualTo?: number;
  greaterThan?: number;
  greaterThanOrEqualTo?: number;
}
export interface BooleanFilter {
  isNull?: boolean;
  equalTo?: boolean;
  notEqualTo?: boolean;
}
export interface UUIDFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
}
export interface DatetimeFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
}
export interface DateFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
}
export interface JSONFilter {
  isNull?: boolean;
  equalTo?: Record<string, unknown>;
  notEqualTo?: Record<string, unknown>;
  distinctFrom?: Record<string, unknown>;
  notDistinctFrom?: Record<string, unknown>;
  contains?: Record<string, unknown>;
  containedBy?: Record<string, unknown>;
  containsKey?: string;
  containsAllKeys?: string[];
  containsAnyKeys?: string[];
}
export interface BigIntFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
}
export interface BigFloatFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
}
export interface BitStringFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
}
export interface InternetAddressFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
  contains?: string;
  containsOrEqualTo?: string;
  containedBy?: string;
  containedByOrEqualTo?: string;
  containsOrContainedBy?: string;
}
export interface FullTextFilter {
  matches?: string;
}
export interface StringListFilter {
  isNull?: boolean;
  equalTo?: string[];
  notEqualTo?: string[];
  distinctFrom?: string[];
  notDistinctFrom?: string[];
  lessThan?: string[];
  lessThanOrEqualTo?: string[];
  greaterThan?: string[];
  greaterThanOrEqualTo?: string[];
  contains?: string[];
  containedBy?: string[];
  overlaps?: string[];
  anyEqualTo?: string;
  anyNotEqualTo?: string;
  anyLessThan?: string;
  anyLessThanOrEqualTo?: string;
  anyGreaterThan?: string;
  anyGreaterThanOrEqualTo?: string;
}
export interface IntListFilter {
  isNull?: boolean;
  equalTo?: number[];
  notEqualTo?: number[];
  distinctFrom?: number[];
  notDistinctFrom?: number[];
  lessThan?: number[];
  lessThanOrEqualTo?: number[];
  greaterThan?: number[];
  greaterThanOrEqualTo?: number[];
  contains?: number[];
  containedBy?: number[];
  overlaps?: number[];
  anyEqualTo?: number;
  anyNotEqualTo?: number;
  anyLessThan?: number;
  anyLessThanOrEqualTo?: number;
  anyGreaterThan?: number;
  anyGreaterThanOrEqualTo?: number;
}
export interface UUIDListFilter {
  isNull?: boolean;
  equalTo?: string[];
  notEqualTo?: string[];
  distinctFrom?: string[];
  notDistinctFrom?: string[];
  lessThan?: string[];
  lessThanOrEqualTo?: string[];
  greaterThan?: string[];
  greaterThanOrEqualTo?: string[];
  contains?: string[];
  containedBy?: string[];
  overlaps?: string[];
  anyEqualTo?: string;
  anyNotEqualTo?: string;
  anyLessThan?: string;
  anyLessThanOrEqualTo?: string;
  anyGreaterThan?: string;
  anyGreaterThanOrEqualTo?: string;
}
// ============ Entity Types ============
export interface User {
  id: string;
  email?: string | null;
  name?: string | null;
  age?: number | null;
  isActive?: boolean | null;
  createdAt?: string | null;
  metadata?: Record<string, unknown> | null;
}
// ============ Relation Helper Types ============
export interface ConnectionResult<T> {
  nodes: T[];
  totalCount: number;
  pageInfo: PageInfo;
}
export interface PageInfo {
  hasNextPage: boolean;
  hasPreviousPage: boolean;
  startCursor?: string | null;
  endCursor?: string | null;
}
// ============ Entity Relation Types ============
export interface UserRelations {}
// ============ Entity Types With Relations ============
export type UserWithRelations = User & UserRelations;
// ============ Entity Select Types ============
export type UserSelect = {
  id?: boolean;
  email?: boolean;
  name?: boolean;
  age?: boolean;
  isActive?: boolean;
  createdAt?: boolean;
  metadata?: boolean;
};
// ============ Table Filter Types ============
export interface UserFilter {
  id?: UUIDFilter;
  email?: StringFilter;
  name?: StringFilter;
  age?: IntFilter;
  isActive?: BooleanFilter;
  createdAt?: DatetimeFilter;
  metadata?: JSONFilter;
  and?: UserFilter[];
  or?: UserFilter[];
  not?: UserFilter;
}
// ============ Table Condition Types ============
export interface UserCondition {
  id?: string | null;
  email?: string | null;
  name?: string | null;
  age?: number | null;
  isActive?: boolean | null;
  createdAt?: string | null;
  metadata?: unknown | null;
}
// ============ OrderBy Types ============
export type UsersOrderBy = "PRIMARY_KEY_ASC" | "PRIMARY_KEY_DESC" | "NATURAL" | "ID_ASC" | "ID_DESC" | "EMAIL_ASC" | "EMAIL_DESC" | "NAME_ASC" | "NAME_DESC" | "AGE_ASC" | "AGE_DESC" | "IS_ACTIVE_ASC" | "IS_ACTIVE_DESC" | "CREATED_AT_ASC" | "CREATED_AT_DESC" | "METADATA_ASC" | "METADATA_DESC";
// ============ CRUD Input Types ============
export interface CreateUserInput {
  clientMutationId?: string;
  user: {
    email?: string;
    name?: string;
    age?: number;
    isActive?: boolean;
    metadata?: Record<string, unknown>;
  };
}
export interface UserPatch {
  email?: string | null;
  name?: string | null;
  age?: number | null;
  isActive?: boolean | null;
  metadata?: Record<string, unknown> | null;
}
export interface UpdateUserInput {
  clientMutationId?: string;
  id: string;
  userPatch: UserPatch;
}
export interface DeleteUserInput {
  clientMutationId?: string;
  id: string;
}
// ============ Connection Fields Map ============
export const connectionFieldsMap = {} as Record<string, Record<string, string>>;
// ============ Custom Input Types (from schema) ============
export interface LoginInput {
  email: string;
  password: string;
  rememberMe?: boolean;
}
export interface RegisterInput {
  email: string;
  password: string;
  name?: string;
}
export type UserRole = "ADMIN" | "USER" | "GUEST";"
`;

exports[`generateInputTypesFile generates payload types for custom operations 1`] = `
"/**
 * GraphQL types for ORM client
 * @generated by @constructive-io/graphql-codegen
 * DO NOT EDIT - changes will be overwritten
 */
// ============ Scalar Filter Types ============
export interface StringFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
  includes?: string;
  notIncludes?: string;
  includesInsensitive?: string;
  notIncludesInsensitive?: string;
  startsWith?: string;
  notStartsWith?: string;
  startsWithInsensitive?: string;
  notStartsWithInsensitive?: string;
  endsWith?: string;
  notEndsWith?: string;
  endsWithInsensitive?: string;
  notEndsWithInsensitive?: string;
  like?: string;
  notLike?: string;
  likeInsensitive?: string;
  notLikeInsensitive?: string;
}
export interface IntFilter {
  isNull?: boolean;
  equalTo?: number;
  notEqualTo?: number;
  distinctFrom?: number;
  notDistinctFrom?: number;
  in?: number[];
  notIn?: number[];
  lessThan?: number;
  lessThanOrEqualTo?: number;
  greaterThan?: number;
  greaterThanOrEqualTo?: number;
}
export interface FloatFilter {
  isNull?: boolean;
  equalTo?: number;
  notEqualTo?: number;
  distinctFrom?: number;
  notDistinctFrom?: number;
  in?: number[];
  notIn?: number[];
  lessThan?: number;
  lessThanOrEqualTo?: number;
  greaterThan?: number;
  greaterThanOrEqualTo?: number;
}
export interface BooleanFilter {
  isNull?: boolean;
  equalTo?: boolean;
  notEqualTo?: boolean;
}
export interface UUIDFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
}
export interface DatetimeFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
}
export interface DateFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
}
export interface JSONFilter {
  isNull?: boolean;
  equalTo?: Record<string, unknown>;
  notEqualTo?: Record<string, unknown>;
  distinctFrom?: Record<string, unknown>;
  notDistinctFrom?: Record<string, unknown>;
  contains?: Record<string, unknown>;
  containedBy?: Record<string, unknown>;
  containsKey?: string;
  containsAllKeys?: string[];
  containsAnyKeys?: string[];
}
export interface BigIntFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
}
export interface BigFloatFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
}
export interface BitStringFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
}
export interface InternetAddressFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
  contains?: string;
  containsOrEqualTo?: string;
  containedBy?: string;
  containedByOrEqualTo?: string;
  containsOrContainedBy?: string;
}
export interface FullTextFilter {
  matches?: string;
}
export interface StringListFilter {
  isNull?: boolean;
  equalTo?: string[];
  notEqualTo?: string[];
  distinctFrom?: string[];
  notDistinctFrom?: string[];
  lessThan?: string[];
  lessThanOrEqualTo?: string[];
  greaterThan?: string[];
  greaterThanOrEqualTo?: string[];
  contains?: string[];
  containedBy?: string[];
  overlaps?: string[];
  anyEqualTo?: string;
  anyNotEqualTo?: string;
  anyLessThan?: string;
  anyLessThanOrEqualTo?: string;
  anyGreaterThan?: string;
  anyGreaterThanOrEqualTo?: string;
}
export interface IntListFilter {
  isNull?: boolean;
  equalTo?: number[];
  notEqualTo?: number[];
  distinctFrom?: number[];
  notDistinctFrom?: number[];
  lessThan?: number[];
  lessThanOrEqualTo?: number[];
  greaterThan?: number[];
  greaterThanOrEqualTo?: number[];
  contains?: number[];
  containedBy?: number[];
  overlaps?: number[];
  anyEqualTo?: number;
  anyNotEqualTo?: number;
  anyLessThan?: number;
  anyLessThanOrEqualTo?: number;
  anyGreaterThan?: number;
  anyGreaterThanOrEqualTo?: number;
}
export interface UUIDListFilter {
  isNull?: boolean;
  equalTo?: string[];
  notEqualTo?: string[];
  distinctFrom?: string[];
  notDistinctFrom?: string[];
  lessThan?: string[];
  lessThanOrEqualTo?: string[];
  greaterThan?: string[];
  greaterThanOrEqualTo?: string[];
  contains?: string[];
  containedBy?: string[];
  overlaps?: string[];
  anyEqualTo?: string;
  anyNotEqualTo?: string;
  anyLessThan?: string;
  anyLessThanOrEqualTo?: string;
  anyGreaterThan?: string;
  anyGreaterThanOrEqualTo?: string;
}
// ============ Entity Types ============
export interface User {
  id: string;
  email?: string | null;
  name?: string | null;
  age?: number | null;
  isActive?: boolean | null;
  createdAt?: string | null;
  metadata?: Record<string, unknown> | null;
}
// ============ Relation Helper Types ============
export interface ConnectionResult<T> {
  nodes: T[];
  totalCount: number;
  pageInfo: PageInfo;
}
export interface PageInfo {
  hasNextPage: boolean;
  hasPreviousPage: boolean;
  startCursor?: string | null;
  endCursor?: string | null;
}
// ============ Entity Relation Types ============
export interface UserRelations {}
// ============ Entity Types With Relations ============
export type UserWithRelations = User & UserRelations;
// ============ Entity Select Types ============
export type UserSelect = {
  id?: boolean;
  email?: boolean;
  name?: boolean;
  age?: boolean;
  isActive?: boolean;
  createdAt?: boolean;
  metadata?: boolean;
};
// ============ Table Filter Types ============
export interface UserFilter {
  id?: UUIDFilter;
  email?: StringFilter;
  name?: StringFilter;
  age?: IntFilter;
  isActive?: BooleanFilter;
  createdAt?: DatetimeFilter;
  metadata?: JSONFilter;
  and?: UserFilter[];
  or?: UserFilter[];
  not?: UserFilter;
}
// ============ Table Condition Types ============
export interface UserCondition {
  id?: string | null;
  email?: string | null;
  name?: string | null;
  age?: number | null;
  isActive?: boolean | null;
  createdAt?: string | null;
  metadata?: unknown | null;
}
// ============ OrderBy Types ============
export type UsersOrderBy = "PRIMARY_KEY_ASC" | "PRIMARY_KEY_DESC" | "NATURAL" | "ID_ASC" | "ID_DESC" | "EMAIL_ASC" | "EMAIL_DESC" | "NAME_ASC" | "NAME_DESC" | "AGE_ASC" | "AGE_DESC" | "IS_ACTIVE_ASC" | "IS_ACTIVE_DESC" | "CREATED_AT_ASC" | "CREATED_AT_DESC" | "METADATA_ASC" | "METADATA_DESC";
// ============ CRUD Input Types ============
export interface CreateUserInput {
  clientMutationId?: string;
  user: {
    email?: string;
    name?: string;
    age?: number;
    isActive?: boolean;
    metadata?: Record<string, unknown>;
  };
}
export interface UserPatch {
  email?: string | null;
  name?: string | null;
  age?: number | null;
  isActive?: boolean | null;
  metadata?: Record<string, unknown> | null;
}
export interface UpdateUserInput {
  clientMutationId?: string;
  id: string;
  userPatch: UserPatch;
}
export interface DeleteUserInput {
  clientMutationId?: string;
  id: string;
}
// ============ Connection Fields Map ============
export const connectionFieldsMap = {} as Record<string, Record<string, string>>;
// ============ Custom Input Types (from schema) ============
export interface LoginInput {
  email: string;
  password: string;
  rememberMe?: boolean;
}
// ============ Payload/Return Types (for custom operations) ============
export interface LoginPayload {
  token?: string | null;
  user?: User | null;
  expiresAt?: string | null;
}
export type LoginPayloadSelect = {
  token?: boolean;
  user?: boolean;
  expiresAt?: boolean;
};"
`;

exports[`generateInputTypesFile generates types with hasOne relations 1`] = `
"/**
 * GraphQL types for ORM client
 * @generated by @constructive-io/graphql-codegen
 * DO NOT EDIT - changes will be overwritten
 */
// ============ Scalar Filter Types ============
export interface StringFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
  includes?: string;
  notIncludes?: string;
  includesInsensitive?: string;
  notIncludesInsensitive?: string;
  startsWith?: string;
  notStartsWith?: string;
  startsWithInsensitive?: string;
  notStartsWithInsensitive?: string;
  endsWith?: string;
  notEndsWith?: string;
  endsWithInsensitive?: string;
  notEndsWithInsensitive?: string;
  like?: string;
  notLike?: string;
  likeInsensitive?: string;
  notLikeInsensitive?: string;
}
export interface IntFilter {
  isNull?: boolean;
  equalTo?: number;
  notEqualTo?: number;
  distinctFrom?: number;
  notDistinctFrom?: number;
  in?: number[];
  notIn?: number[];
  lessThan?: number;
  lessThanOrEqualTo?: number;
  greaterThan?: number;
  greaterThanOrEqualTo?: number;
}
export interface FloatFilter {
  isNull?: boolean;
  equalTo?: number;
  notEqualTo?: number;
  distinctFrom?: number;
  notDistinctFrom?: number;
  in?: number[];
  notIn?: number[];
  lessThan?: number;
  lessThanOrEqualTo?: number;
  greaterThan?: number;
  greaterThanOrEqualTo?: number;
}
export interface BooleanFilter {
  isNull?: boolean;
  equalTo?: boolean;
  notEqualTo?: boolean;
}
export interface UUIDFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
}
export interface DatetimeFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
}
export interface DateFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
}
export interface JSONFilter {
  isNull?: boolean;
  equalTo?: Record<string, unknown>;
  notEqualTo?: Record<string, unknown>;
  distinctFrom?: Record<string, unknown>;
  notDistinctFrom?: Record<string, unknown>;
  contains?: Record<string, unknown>;
  containedBy?: Record<string, unknown>;
  containsKey?: string;
  containsAllKeys?: string[];
  containsAnyKeys?: string[];
}
export interface BigIntFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
}
export interface BigFloatFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
}
export interface BitStringFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
}
export interface InternetAddressFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
  contains?: string;
  containsOrEqualTo?: string;
  containedBy?: string;
  containedByOrEqualTo?: string;
  containsOrContainedBy?: string;
}
export interface FullTextFilter {
  matches?: string;
}
export interface StringListFilter {
  isNull?: boolean;
  equalTo?: string[];
  notEqualTo?: string[];
  distinctFrom?: string[];
  notDistinctFrom?: string[];
  lessThan?: string[];
  lessThanOrEqualTo?: string[];
  greaterThan?: string[];
  greaterThanOrEqualTo?: string[];
  contains?: string[];
  containedBy?: string[];
  overlaps?: string[];
  anyEqualTo?: string;
  anyNotEqualTo?: string;
  anyLessThan?: string;
  anyLessThanOrEqualTo?: string;
  anyGreaterThan?: string;
  anyGreaterThanOrEqualTo?: string;
}
export interface IntListFilter {
  isNull?: boolean;
  equalTo?: number[];
  notEqualTo?: number[];
  distinctFrom?: number[];
  notDistinctFrom?: number[];
  lessThan?: number[];
  lessThanOrEqualTo?: number[];
  greaterThan?: number[];
  greaterThanOrEqualTo?: number[];
  contains?: number[];
  containedBy?: number[];
  overlaps?: number[];
  anyEqualTo?: number;
  anyNotEqualTo?: number;
  anyLessThan?: number;
  anyLessThanOrEqualTo?: number;
  anyGreaterThan?: number;
  anyGreaterThanOrEqualTo?: number;
}
export interface UUIDListFilter {
  isNull?: boolean;
  equalTo?: string[];
  notEqualTo?: string[];
  distinctFrom?: string[];
  notDistinctFrom?: string[];
  lessThan?: string[];
  lessThanOrEqualTo?: string[];
  greaterThan?: string[];
  greaterThanOrEqualTo?: string[];
  contains?: string[];
  containedBy?: string[];
  overlaps?: string[];
  anyEqualTo?: string;
  anyNotEqualTo?: string;
  anyLessThan?: string;
  anyLessThanOrEqualTo?: string;
  anyGreaterThan?: string;
  anyGreaterThanOrEqualTo?: string;
}
// ============ Entity Types ============
export interface User {
  id: string;
  email?: string | null;
  name?: string | null;
  age?: number | null;
  isActive?: boolean | null;
  createdAt?: string | null;
  metadata?: Record<string, unknown> | null;
}
export interface Profile {
  id: string;
  bio?: string | null;
  userId?: string | null;
  avatarUrl?: string | null;
}
// ============ Relation Helper Types ============
export interface ConnectionResult<T> {
  nodes: T[];
  totalCount: number;
  pageInfo: PageInfo;
}
export interface PageInfo {
  hasNextPage: boolean;
  hasPreviousPage: boolean;
  startCursor?: string | null;
  endCursor?: string | null;
}
// ============ Entity Relation Types ============
export interface UserRelations {
  profile?: Profile | null;
  posts?: ConnectionResult<Post>;
}
export interface ProfileRelations {
  user?: User | null;
}
// ============ Entity Types With Relations ============
export type UserWithRelations = User & UserRelations;
export type ProfileWithRelations = Profile & ProfileRelations;
// ============ Entity Select Types ============
export type UserSelect = {
  id?: boolean;
  email?: boolean;
  name?: boolean;
  age?: boolean;
  isActive?: boolean;
  createdAt?: boolean;
  metadata?: boolean;
  posts?: {
    select: PostSelect;
    first?: number;
    filter?: PostFilter;
    orderBy?: PostsOrderBy[];
  };
  profile?: {
    select: ProfileSelect;
  };
};
export type ProfileSelect = {
  id?: boolean;
  bio?: boolean;
  userId?: boolean;
  avatarUrl?: boolean;
  user?: {
    select: UserSelect;
  };
};
// ============ Table Filter Types ============
export interface UserFilter {
  id?: UUIDFilter;
  email?: StringFilter;
  name?: StringFilter;
  age?: IntFilter;
  isActive?: BooleanFilter;
  createdAt?: DatetimeFilter;
  metadata?: JSONFilter;
  and?: UserFilter[];
  or?: UserFilter[];
  not?: UserFilter;
}
export interface ProfileFilter {
  id?: UUIDFilter;
  bio?: StringFilter;
  userId?: UUIDFilter;
  avatarUrl?: StringFilter;
  and?: ProfileFilter[];
  or?: ProfileFilter[];
  not?: ProfileFilter;
}
// ============ Table Condition Types ============
export interface UserCondition {
  id?: string | null;
  email?: string | null;
  name?: string | null;
  age?: number | null;
  isActive?: boolean | null;
  createdAt?: string | null;
  metadata?: unknown | null;
}
export interface ProfileCondition {
  id?: string | null;
  bio?: string | null;
  userId?: string | null;
  avatarUrl?: string | null;
}
// ============ OrderBy Types ============
export type UsersOrderBy = "PRIMARY_KEY_ASC" | "PRIMARY_KEY_DESC" | "NATURAL" | "ID_ASC" | "ID_DESC" | "EMAIL_ASC" | "EMAIL_DESC" | "NAME_ASC" | "NAME_DESC" | "AGE_ASC" | "AGE_DESC" | "IS_ACTIVE_ASC" | "IS_ACTIVE_DESC" | "CREATED_AT_ASC" | "CREATED_AT_DESC" | "METADATA_ASC" | "METADATA_DESC";
export type ProfilesOrderBy = "PRIMARY_KEY_ASC" | "PRIMARY_KEY_DESC" | "NATURAL" | "ID_ASC" | "ID_DESC" | "BIO_ASC" | "BIO_DESC" | "USER_ID_ASC" | "USER_ID_DESC" | "AVATAR_URL_ASC" | "AVATAR_URL_DESC";
// ============ CRUD Input Types ============
export interface CreateUserInput {
  clientMutationId?: string;
  user: {
    email?: string;
    name?: string;
    age?: number;
    isActive?: boolean;
    metadata?: Record<string, unknown>;
  };
}
export interface UserPatch {
  email?: string | null;
  name?: string | null;
  age?: number | null;
  isActive?: boolean | null;
  metadata?: Record<string, unknown> | null;
}
export interface UpdateUserInput {
  clientMutationId?: string;
  id: string;
  userPatch: UserPatch;
}
export interface DeleteUserInput {
  clientMutationId?: string;
  id: string;
}
export interface CreateProfileInput {
  clientMutationId?: string;
  profile: {
    bio?: string;
    userId: string;
    avatarUrl?: string;
  };
}
export interface ProfilePatch {
  bio?: string | null;
  userId?: string | null;
  avatarUrl?: string | null;
}
export interface UpdateProfileInput {
  clientMutationId?: string;
  id: string;
  profilePatch: ProfilePatch;
}
export interface DeleteProfileInput {
  clientMutationId?: string;
  id: string;
}
// ============ Connection Fields Map ============
export const connectionFieldsMap = {
  "User": {
    "posts": "Post"
  }
} as Record<string, Record<string, string>>;"
`;

exports[`generateInputTypesFile generates types with manyToMany relations 1`] = `
"/**
 * GraphQL types for ORM client
 * @generated by @constructive-io/graphql-codegen
 * DO NOT EDIT - changes will be overwritten
 */
// ============ Scalar Filter Types ============
export interface StringFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
  includes?: string;
  notIncludes?: string;
  includesInsensitive?: string;
  notIncludesInsensitive?: string;
  startsWith?: string;
  notStartsWith?: string;
  startsWithInsensitive?: string;
  notStartsWithInsensitive?: string;
  endsWith?: string;
  notEndsWith?: string;
  endsWithInsensitive?: string;
  notEndsWithInsensitive?: string;
  like?: string;
  notLike?: string;
  likeInsensitive?: string;
  notLikeInsensitive?: string;
}
export interface IntFilter {
  isNull?: boolean;
  equalTo?: number;
  notEqualTo?: number;
  distinctFrom?: number;
  notDistinctFrom?: number;
  in?: number[];
  notIn?: number[];
  lessThan?: number;
  lessThanOrEqualTo?: number;
  greaterThan?: number;
  greaterThanOrEqualTo?: number;
}
export interface FloatFilter {
  isNull?: boolean;
  equalTo?: number;
  notEqualTo?: number;
  distinctFrom?: number;
  notDistinctFrom?: number;
  in?: number[];
  notIn?: number[];
  lessThan?: number;
  lessThanOrEqualTo?: number;
  greaterThan?: number;
  greaterThanOrEqualTo?: number;
}
export interface BooleanFilter {
  isNull?: boolean;
  equalTo?: boolean;
  notEqualTo?: boolean;
}
export interface UUIDFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
}
export interface DatetimeFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
}
export interface DateFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
}
export interface JSONFilter {
  isNull?: boolean;
  equalTo?: Record<string, unknown>;
  notEqualTo?: Record<string, unknown>;
  distinctFrom?: Record<string, unknown>;
  notDistinctFrom?: Record<string, unknown>;
  contains?: Record<string, unknown>;
  containedBy?: Record<string, unknown>;
  containsKey?: string;
  containsAllKeys?: string[];
  containsAnyKeys?: string[];
}
export interface BigIntFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
}
export interface BigFloatFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
}
export interface BitStringFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
}
export interface InternetAddressFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
  contains?: string;
  containsOrEqualTo?: string;
  containedBy?: string;
  containedByOrEqualTo?: string;
  containsOrContainedBy?: string;
}
export interface FullTextFilter {
  matches?: string;
}
export interface StringListFilter {
  isNull?: boolean;
  equalTo?: string[];
  notEqualTo?: string[];
  distinctFrom?: string[];
  notDistinctFrom?: string[];
  lessThan?: string[];
  lessThanOrEqualTo?: string[];
  greaterThan?: string[];
  greaterThanOrEqualTo?: string[];
  contains?: string[];
  containedBy?: string[];
  overlaps?: string[];
  anyEqualTo?: string;
  anyNotEqualTo?: string;
  anyLessThan?: string;
  anyLessThanOrEqualTo?: string;
  anyGreaterThan?: string;
  anyGreaterThanOrEqualTo?: string;
}
export interface IntListFilter {
  isNull?: boolean;
  equalTo?: number[];
  notEqualTo?: number[];
  distinctFrom?: number[];
  notDistinctFrom?: number[];
  lessThan?: number[];
  lessThanOrEqualTo?: number[];
  greaterThan?: number[];
  greaterThanOrEqualTo?: number[];
  contains?: number[];
  containedBy?: number[];
  overlaps?: number[];
  anyEqualTo?: number;
  anyNotEqualTo?: number;
  anyLessThan?: number;
  anyLessThanOrEqualTo?: number;
  anyGreaterThan?: number;
  anyGreaterThanOrEqualTo?: number;
}
export interface UUIDListFilter {
  isNull?: boolean;
  equalTo?: string[];
  notEqualTo?: string[];
  distinctFrom?: string[];
  notDistinctFrom?: string[];
  lessThan?: string[];
  lessThanOrEqualTo?: string[];
  greaterThan?: string[];
  greaterThanOrEqualTo?: string[];
  contains?: string[];
  containedBy?: string[];
  overlaps?: string[];
  anyEqualTo?: string;
  anyNotEqualTo?: string;
  anyLessThan?: string;
  anyLessThanOrEqualTo?: string;
  anyGreaterThan?: string;
  anyGreaterThanOrEqualTo?: string;
}
// ============ Entity Types ============
export interface Post {
  id: string;
  title?: string | null;
  content?: string | null;
  authorId?: string | null;
  publishedAt?: string | null;
  tags?: string | null;
}
export interface Category {
  id: string;
  name?: string | null;
  slug?: string | null;
}
// ============ Relation Helper Types ============
export interface ConnectionResult<T> {
  nodes: T[];
  totalCount: number;
  pageInfo: PageInfo;
}
export interface PageInfo {
  hasNextPage: boolean;
  hasPreviousPage: boolean;
  startCursor?: string | null;
  endCursor?: string | null;
}
// ============ Entity Relation Types ============
export interface PostRelations {
  author?: User | null;
  comments?: ConnectionResult<Comment>;
}
export interface CategoryRelations {
  posts?: ConnectionResult<Post>;
}
// ============ Entity Types With Relations ============
export type PostWithRelations = Post & PostRelations;
export type CategoryWithRelations = Category & CategoryRelations;
// ============ Entity Select Types ============
export type PostSelect = {
  id?: boolean;
  title?: boolean;
  content?: boolean;
  authorId?: boolean;
  publishedAt?: boolean;
  tags?: boolean;
  author?: {
    select: UserSelect;
  };
  comments?: {
    select: CommentSelect;
    first?: number;
    filter?: CommentFilter;
    orderBy?: CommentsOrderBy[];
  };
};
export type CategorySelect = {
  id?: boolean;
  name?: boolean;
  slug?: boolean;
  posts?: {
    select: PostSelect;
    first?: number;
    filter?: PostFilter;
    orderBy?: PostsOrderBy[];
  };
};
// ============ Table Filter Types ============
export interface PostFilter {
  id?: UUIDFilter;
  title?: StringFilter;
  content?: StringFilter;
  authorId?: UUIDFilter;
  publishedAt?: DatetimeFilter;
  tags?: StringFilter;
  and?: PostFilter[];
  or?: PostFilter[];
  not?: PostFilter;
}
export interface CategoryFilter {
  id?: UUIDFilter;
  name?: StringFilter;
  slug?: StringFilter;
  and?: CategoryFilter[];
  or?: CategoryFilter[];
  not?: CategoryFilter;
}
// ============ Table Condition Types ============
export interface PostCondition {
  id?: string | null;
  title?: string | null;
  content?: string | null;
  authorId?: string | null;
  publishedAt?: string | null;
  tags?: string | null;
}
export interface CategoryCondition {
  id?: string | null;
  name?: string | null;
  slug?: string | null;
}
// ============ OrderBy Types ============
export type PostsOrderBy = "PRIMARY_KEY_ASC" | "PRIMARY_KEY_DESC" | "NATURAL" | "ID_ASC" | "ID_DESC" | "TITLE_ASC" | "TITLE_DESC" | "CONTENT_ASC" | "CONTENT_DESC" | "AUTHOR_ID_ASC" | "AUTHOR_ID_DESC" | "PUBLISHED_AT_ASC" | "PUBLISHED_AT_DESC" | "TAGS_ASC" | "TAGS_DESC";
export type CategoriesOrderBy = "PRIMARY_KEY_ASC" | "PRIMARY_KEY_DESC" | "NATURAL" | "ID_ASC" | "ID_DESC" | "NAME_ASC" | "NAME_DESC" | "SLUG_ASC" | "SLUG_DESC";
// ============ CRUD Input Types ============
export interface CreatePostInput {
  clientMutationId?: string;
  post: {
    title?: string;
    content?: string;
    authorId: string;
    publishedAt?: string;
    tags?: string;
  };
}
export interface PostPatch {
  title?: string | null;
  content?: string | null;
  authorId?: string | null;
  publishedAt?: string | null;
  tags?: string | null;
}
export interface UpdatePostInput {
  clientMutationId?: string;
  id: string;
  postPatch: PostPatch;
}
export interface DeletePostInput {
  clientMutationId?: string;
  id: string;
}
export interface CreateCategoryInput {
  clientMutationId?: string;
  category: {
    name?: string;
    slug?: string;
  };
}
export interface CategoryPatch {
  name?: string | null;
  slug?: string | null;
}
export interface UpdateCategoryInput {
  clientMutationId?: string;
  id: string;
  categoryPatch: CategoryPatch;
}
export interface DeleteCategoryInput {
  clientMutationId?: string;
  id: string;
}
// ============ Connection Fields Map ============
export const connectionFieldsMap = {
  "Post": {
    "comments": "Comment"
  },
  "Category": {
    "posts": "Post"
  }
} as Record<string, Record<string, string>>;"
`;

exports[`generateInputTypesFile handles empty tables array 1`] = `
"/**
 * GraphQL types for ORM client
 * @generated by @constructive-io/graphql-codegen
 * DO NOT EDIT - changes will be overwritten
 */
// ============ Scalar Filter Types ============
export interface StringFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
  includes?: string;
  notIncludes?: string;
  includesInsensitive?: string;
  notIncludesInsensitive?: string;
  startsWith?: string;
  notStartsWith?: string;
  startsWithInsensitive?: string;
  notStartsWithInsensitive?: string;
  endsWith?: string;
  notEndsWith?: string;
  endsWithInsensitive?: string;
  notEndsWithInsensitive?: string;
  like?: string;
  notLike?: string;
  likeInsensitive?: string;
  notLikeInsensitive?: string;
}
export interface IntFilter {
  isNull?: boolean;
  equalTo?: number;
  notEqualTo?: number;
  distinctFrom?: number;
  notDistinctFrom?: number;
  in?: number[];
  notIn?: number[];
  lessThan?: number;
  lessThanOrEqualTo?: number;
  greaterThan?: number;
  greaterThanOrEqualTo?: number;
}
export interface FloatFilter {
  isNull?: boolean;
  equalTo?: number;
  notEqualTo?: number;
  distinctFrom?: number;
  notDistinctFrom?: number;
  in?: number[];
  notIn?: number[];
  lessThan?: number;
  lessThanOrEqualTo?: number;
  greaterThan?: number;
  greaterThanOrEqualTo?: number;
}
export interface BooleanFilter {
  isNull?: boolean;
  equalTo?: boolean;
  notEqualTo?: boolean;
}
export interface UUIDFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
}
export interface DatetimeFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
}
export interface DateFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
}
export interface JSONFilter {
  isNull?: boolean;
  equalTo?: Record<string, unknown>;
  notEqualTo?: Record<string, unknown>;
  distinctFrom?: Record<string, unknown>;
  notDistinctFrom?: Record<string, unknown>;
  contains?: Record<string, unknown>;
  containedBy?: Record<string, unknown>;
  containsKey?: string;
  containsAllKeys?: string[];
  containsAnyKeys?: string[];
}
export interface BigIntFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
}
export interface BigFloatFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
}
export interface BitStringFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
}
export interface InternetAddressFilter {
  isNull?: boolean;
  equalTo?: string;
  notEqualTo?: string;
  distinctFrom?: string;
  notDistinctFrom?: string;
  in?: string[];
  notIn?: string[];
  lessThan?: string;
  lessThanOrEqualTo?: string;
  greaterThan?: string;
  greaterThanOrEqualTo?: string;
  contains?: string;
  containsOrEqualTo?: string;
  containedBy?: string;
  containedByOrEqualTo?: string;
  containsOrContainedBy?: string;
}
export interface FullTextFilter {
  matches?: string;
}
export interface StringListFilter {
  isNull?: boolean;
  equalTo?: string[];
  notEqualTo?: string[];
  distinctFrom?: string[];
  notDistinctFrom?: string[];
  lessThan?: string[];
  lessThanOrEqualTo?: string[];
  greaterThan?: string[];
  greaterThanOrEqualTo?: string[];
  contains?: string[];
  containedBy?: string[];
  overlaps?: string[];
  anyEqualTo?: string;
  anyNotEqualTo?: string;
  anyLessThan?: string;
  anyLessThanOrEqualTo?: string;
  anyGreaterThan?: string;
  anyGreaterThanOrEqualTo?: string;
}
export interface IntListFilter {
  isNull?: boolean;
  equalTo?: number[];
  notEqualTo?: number[];
  distinctFrom?: number[];
  notDistinctFrom?: number[];
  lessThan?: number[];
  lessThanOrEqualTo?: number[];
  greaterThan?: number[];
  greaterThanOrEqualTo?: number[];
  contains?: number[];
  containedBy?: number[];
  overlaps?: number[];
  anyEqualTo?: number;
  anyNotEqualTo?: number;
  anyLessThan?: number;
  anyLessThanOrEqualTo?: number;
  anyGreaterThan?: number;
  anyGreaterThanOrEqualTo?: number;
}
export interface UUIDListFilter {
  isNull?: boolean;
  equalTo?: string[];
  notEqualTo?: string[];
  distinctFrom?: string[];
  notDistinctFrom?: string[];
  lessThan?: string[];
  lessThanOrEqualTo?: string[];
  greaterThan?: string[];
  greaterThanOrEqualTo?: string[];
  contains?: string[];
  containedBy?: string[];
  overlaps?: string[];
  anyEqualTo?: string;
  anyNotEqualTo?: string;
  anyLessThan?: string;
  anyLessThanOrEqualTo?: string;
  anyGreaterThan?: string;
  anyGreaterThanOrEqualTo?: string;
}
// ============ Connection Fields Map ============
export const connectionFieldsMap = {} as Record<string, Record<string, string>>;"
`;
